More fixes of changing parentheses into square brackets

--- a/examples/jupyter/mgxs-part-iii.ipynb
+++ b/examples/jupyter/mgxs-part-iii.ipynb
@@ -134,7 +134,7 @@
    "outputs": [],
    "source": [
     "# Instantiate a Materials object\n",
-    "materials_file = openmc.Materials((fuel, water, zircaloy))\n",
+    "materials_file = openmc.Materials([fuel, water, zircaloy])\n",
     "\n",
     "# Export to \"materials.xml\"\n",
     "materials_file.export_to_xml()"
