Update Jupyter notebooks to remove use of openmc.Nuclide

--- a/examples/jupyter/mgxs-part-iii.ipynb
+++ b/examples/jupyter/mgxs-part-iii.ipynb
@@ -63,31 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First we need to define materials that will be used in the problem. Before defining a material, we must create nuclides that are used in the material."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Instantiate some Nuclides\n",
-    "h1 = openmc.Nuclide('H1')\n",
-    "b10 = openmc.Nuclide('B10')\n",
-    "o16 = openmc.Nuclide('O16')\n",
-    "u235 = openmc.Nuclide('U235')\n",
-    "u238 = openmc.Nuclide('U238')\n",
-    "zr90 = openmc.Nuclide('Zr90')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "With the nuclides we defined, we will now create three materials for the fuel, water, and cladding of the fuel pins."
+    "First we need to define materials that will be used in the problem. We'll create three materials for the fuel, water, and cladding of the fuel pins."
    ]
   },
   {
@@ -101,21 +77,21 @@
     "# 1.6 enriched fuel\n",
     "fuel = openmc.Material(name='1.6% Fuel')\n",
     "fuel.set_density('g/cm3', 10.31341)\n",
-    "fuel.add_nuclide(u235, 3.7503e-4)\n",
-    "fuel.add_nuclide(u238, 2.2625e-2)\n",
-    "fuel.add_nuclide(o16, 4.6007e-2)\n",
+    "fuel.add_nuclide('U235', 3.7503e-4)\n",
+    "fuel.add_nuclide('U238', 2.2625e-2)\n",
+    "fuel.add_nuclide('O16', 4.6007e-2)\n",
     "\n",
     "# borated water\n",
     "water = openmc.Material(name='Borated Water')\n",
     "water.set_density('g/cm3', 0.740582)\n",
-    "water.add_nuclide(h1, 4.9457e-2)\n",
-    "water.add_nuclide(o16, 2.4732e-2)\n",
-    "water.add_nuclide(b10, 8.0042e-6)\n",
+    "water.add_nuclide('H1', 4.9457e-2)\n",
+    "water.add_nuclide('O16', 2.4732e-2)\n",
+    "water.add_nuclide('B10', 8.0042e-6)\n",
     "\n",
     "# zircaloy\n",
     "zircaloy = openmc.Material(name='Zircaloy')\n",
     "zircaloy.set_density('g/cm3', 6.55)\n",
-    "zircaloy.add_nuclide(zr90, 7.2758e-3)"
+    "zircaloy.add_nuclide('Zr90', 7.2758e-3)"
    ]
   },
   {
@@ -338,8 +314,7 @@
    "outputs": [],
    "source": [
     "# Create Geometry and set root Universe\n",
-    "geometry = openmc.Geometry()\n",
-    "geometry.root_universe = root_universe"
+    "geometry = openmc.Geometry(root_universe)"
    ]
   },
   {
@@ -1679,7 +1654,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
