added example notebook for covariance module

--- a/examples/jupyter/mgxs-part-i.ipynb
+++ b/examples/jupyter/mgxs-part-i.ipynb
@@ -28,7 +28,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -132,7 +134,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
@@ -153,33 +157,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-<<<<<<< HEAD
-    "# Instantiate some Nuclides\n",
-    "h1 = openmc.Nuclide('H1')\n",
-    "o16 = openmc.Nuclide('O16')\n",
-    "u235 = openmc.Nuclide('U235')\n",
-    "u238 = openmc.Nuclide('U238')\n",
-    "zr90 = openmc.Nuclide('Zr90')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "With the nuclides we defined, we will now create a material for the homogeneous medium."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-=======
->>>>>>> upstream/develop
     "# Instantiate a Material and register the Nuclides\n",
     "inf_medium = openmc.Material(name='moderator')\n",
     "inf_medium.set_density('g/cc', 5.)\n",
@@ -199,15 +181,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 5,
-   "metadata": {},
-=======
    "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
->>>>>>> upstream/develop
    "outputs": [],
    "source": [
     "# Instantiate a Materials collection and export to XML\n",
@@ -224,15 +201,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 6,
-   "metadata": {},
-=======
    "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
->>>>>>> upstream/develop
    "outputs": [],
    "source": [
     "# Instantiate boundary Planes\n",
@@ -251,15 +223,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 7,
-   "metadata": {},
-=======
    "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
->>>>>>> upstream/develop
    "outputs": [],
    "source": [
     "# Instantiate a Cell\n",
@@ -281,15 +248,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 8,
-   "metadata": {},
-=======
    "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
->>>>>>> upstream/develop
    "outputs": [],
    "source": [
     "# Create root universe\n",
@@ -305,15 +267,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 9,
-   "metadata": {},
-=======
    "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
->>>>>>> upstream/develop
    "outputs": [],
    "source": [
     "# Create Geometry and set root Universe\n",
@@ -332,15 +289,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 10,
-   "metadata": {},
-=======
    "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
->>>>>>> upstream/develop
    "outputs": [],
    "source": [
     "# OpenMC simulation parameters\n",
@@ -373,15 +325,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 11,
-   "metadata": {},
-=======
    "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
->>>>>>> upstream/develop
    "outputs": [],
    "source": [
     "# Instantiate a 2-group EnergyGroups object\n",
@@ -417,15 +364,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 12,
-   "metadata": {},
-=======
    "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
->>>>>>> upstream/develop
    "outputs": [],
    "source": [
     "# Instantiate a few different sections\n",
@@ -447,15 +389,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 13,
-   "metadata": {},
-=======
    "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
->>>>>>> upstream/develop
    "outputs": [
     {
      "data": {
@@ -493,29 +430,18 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 14,
-   "metadata": {},
-=======
    "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
->>>>>>> upstream/develop
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-<<<<<<< HEAD
-      "/home/icmeyer/miniconda3/lib/python3.6/site-packages/openmc-0.9.0-py3.6-linux-x86_64.egg/openmc/mixin.py:61: IDWarning: Another CellFilter instance already exists with id=3.\n",
-      "  warn(msg, IDWarning)\n",
-      "/home/icmeyer/miniconda3/lib/python3.6/site-packages/openmc-0.9.0-py3.6-linux-x86_64.egg/openmc/mixin.py:61: IDWarning: Another EnergyFilter instance already exists with id=4.\n",
-=======
       "/home/romano/openmc/openmc/mixin.py:61: IDWarning: Another CellFilter instance already exists with id=3.\n",
       "  warn(msg, IDWarning)\n",
       "/home/romano/openmc/openmc/mixin.py:61: IDWarning: Another EnergyFilter instance already exists with id=4.\n",
->>>>>>> upstream/develop
       "  warn(msg, IDWarning)\n"
      ]
     }
@@ -546,11 +472,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-=======
    "execution_count": 14,
    "metadata": {
     "collapsed": false
@@ -702,7 +623,6 @@
      "output_type": "execute_result"
     }
    ],
->>>>>>> upstream/develop
    "source": [
     "# Run OpenMC\n",
     "openmc.run()"
@@ -724,15 +644,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "metadata": {},
-=======
    "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
->>>>>>> upstream/develop
    "outputs": [],
    "source": [
     "# Load the last statepoint file\n",
@@ -755,15 +670,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "metadata": {},
-=======
    "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
->>>>>>> upstream/develop
    "outputs": [],
    "source": [
     "# Load the tallies from the statepoint into each MGXS object\n",
@@ -795,11 +705,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-=======
    "execution_count": 17,
    "metadata": {
     "collapsed": false
@@ -822,7 +727,6 @@
      ]
     }
    ],
->>>>>>> upstream/develop
    "source": [
     "total.print_xs()"
    ]
@@ -836,11 +740,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-=======
    "execution_count": 18,
    "metadata": {
     "collapsed": false
@@ -893,7 +792,6 @@
      "output_type": "execute_result"
     }
    ],
->>>>>>> upstream/develop
    "source": [
     "df = scattering.get_pandas_dataframe()\n",
     "df.head(10)"
@@ -908,15 +806,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "metadata": {},
-=======
    "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
->>>>>>> upstream/develop
    "outputs": [],
    "source": [
     "absorption.export_xs_data(filename='absorption-xs', format='excel')"
@@ -931,15 +824,10 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "metadata": {},
-=======
    "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
->>>>>>> upstream/develop
    "outputs": [],
    "source": [
     "total.build_hdf5_store(filename='mgxs', append=True)\n",
@@ -963,11 +851,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-=======
    "execution_count": 21,
    "metadata": {
     "collapsed": false
@@ -1030,7 +913,6 @@
      "output_type": "execute_result"
     }
    ],
->>>>>>> upstream/develop
    "source": [
     "# Use tally arithmetic to compute the difference between the total, absorption and scattering\n",
     "difference = total.xs_tally - absorption.xs_tally - scattering.xs_tally\n",
@@ -1048,11 +930,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-=======
    "execution_count": 22,
    "metadata": {
     "collapsed": false
@@ -1115,7 +992,6 @@
      "output_type": "execute_result"
     }
    ],
->>>>>>> upstream/develop
    "source": [
     "# Use tally arithmetic to compute the absorption-to-total MGXS ratio\n",
     "absorption_to_total = absorption.xs_tally / total.xs_tally\n",
@@ -1126,11 +1002,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-=======
    "execution_count": 23,
    "metadata": {
     "collapsed": false
@@ -1193,7 +1064,6 @@
      "output_type": "execute_result"
     }
    ],
->>>>>>> upstream/develop
    "source": [
     "# Use tally arithmetic to compute the scattering-to-total MGXS ratio\n",
     "scattering_to_total = scattering.xs_tally / total.xs_tally\n",
@@ -1211,11 +1081,6 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-=======
    "execution_count": 24,
    "metadata": {
     "collapsed": false
@@ -1278,7 +1143,6 @@
      "output_type": "execute_result"
     }
    ],
->>>>>>> upstream/develop
    "source": [
     "# Use tally arithmetic to ensure that the absorption- and scattering-to-total MGXS ratios sum to unity\n",
     "sum_ratio = absorption_to_total + scattering_to_total\n",
@@ -1304,13 +1168,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-<<<<<<< HEAD
-   "version": "3.6.3"
-=======
    "version": "3.6.0"
->>>>>>> upstream/develop
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
