--- a/man/man1/openmc.1
+++ b/man/man1/openmc.1
@@ -79,7 +79,7 @@ IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 .SH REPORTING BUGS
 The OpenMC source code is hosted on GitHub at
-https://github.com/mit-crpg/openmc. With a github account, you can submit issues
+https://github.com/openmc-dev/openmc. With a github account, you can submit issues
 directly on the github repository that will then be reviewed by OpenMC
 developers. Alternatively, you can send a bug report to
 .I openmc-users@googlegroups.com\fP.
