--- a/man/man1/openmc.1
+++ b/man/man1/openmc.1
@@ -59,7 +59,8 @@ Indicates the default path to a directory containing windowed multipole data if
 the user has not specified the <multipole_library> tag in
 .I materials.xml\fP.
 .SH LICENSE
-Copyright \(co 2011-2018 Massachusetts Institute of Technology.
+Copyright \(co 2011-2018 Massachusetts Institute of Technology and OpenMC
+contributors.
 .PP
 Permission is hereby granted, free of charge, to any person obtaining a copy of
 this software and associated documentation files (the "Software"), to deal in
