--- a/examples/jupyter/nuclear-data.ipynb
+++ b/examples/jupyter/nuclear-data.ipynb
@@ -1466,7 +1466,7 @@
    },
    "outputs": [],
    "source": [
-    "url = 'https://anl.box.com/shared/static/ulhcoohm12gduwdalknmf8dpnepzkxj0.h5'\n",
+    "url = 'https://github.com/mit-crpg/WMP_Library/releases/download/v1.0/092238.h5'\n",
     "filename, headers = urllib.request.urlretrieve(url, '092238.h5')"
    ]
   },
@@ -1485,7 +1485,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `WindowedMultipole` object can be called with energy and temperature values.  Calling the object gives a tuple of 3 cross sections: total, radiative capture, and fission."
+    "The `WindowedMultipole` object can be called with energy and temperature values.  Calling the object gives a tuple of 3 cross sections: elastic scattering, radiative capture, and fission."
    ]
   },
   {
@@ -1498,9 +1498,7 @@
     {
      "data": {
       "text/plain": [
-       "(array(9.638243132516015),\n",
-       " array(0.5053244245010787),\n",
-       " array(2.931753364280356e-06))"
+       "(array(9.13284265), array(0.50530278), array(2.9316765e-06))"
       ]
      },
      "execution_count": 43,
