Rename summed -> redundant to make ENDF language

--- a/examples/jupyter/nuclear-data.ipynb
+++ b/examples/jupyter/nuclear-data.ipynb
@@ -621,7 +621,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is also `summed_reactions` attribute for cross sections (like total) which are built from summing up other cross sections."
+    "There is also `redundant_reactions` attribute for cross sections (like total) which are built from summing up other cross sections."
    ]
   },
   {
@@ -640,7 +640,7 @@
     }
    ],
    "source": [
-    "pprint(list(gd157.summed_reactions.values()))"
+    "pprint(list(gd157.redundant_reactions.values()))"
    ]
   },
   {
