Update openmc.Source creation in all example notebooks

--- a/examples/jupyter/mdgxs-part-ii.ipynb
+++ b/examples/jupyter/mdgxs-part-ii.ipynb
@@ -320,7 +320,7 @@
     "# Create an initial uniform spatial source distribution over fissionable zones\n",
     "bounds = [-10.71, -10.71, -10, 10.71, 10.71, 10.]\n",
     "uniform_dist = openmc.stats.Box(bounds[:3], bounds[3:], only_fissionable=True)\n",
-    "settings.source = openmc.source.Source(space=uniform_dist)\n",
+    "settings.source = openmc.Source(space=uniform_dist)\n",
     "\n",
     "# Export to \"settings.xml\"\n",
     "settings.export_to_xml()"
