--- a/examples/jupyter/mg-mode-part-i.ipynb
+++ b/examples/jupyter/mg-mode-part-i.ipynb
@@ -514,7 +514,7 @@
     "# Create an initial uniform spatial source distribution over fissionable zones\n",
     "bounds = [-32.13, -10.71, -1e50, 10.71, 32.13, 1e50]\n",
     "uniform_dist = openmc.stats.Box(bounds[:3], bounds[3:], only_fissionable=True)\n",
-    "settings_file.source = openmc.source.Source(space=uniform_dist)\n",
+    "settings_file.source = openmc.Source(space=uniform_dist)\n",
     "\n",
     "# Tell OpenMC we want to run in eigenvalue mode\n",
     "settings_file.run_mode = 'eigenvalue'\n",
