--- a/examples/jupyter/mg-mode-part-ii.ipynb
+++ b/examples/jupyter/mg-mode-part-ii.ipynb
@@ -351,7 +351,7 @@
     "# Create an initial uniform spatial source distribution over fissionable zones\n",
     "bounds = [-10.71, -10.71, -10, 10.71, 10.71, 10.]\n",
     "uniform_dist = openmc.stats.Box(bounds[:3], bounds[3:], only_fissionable=True)\n",
-    "settings_file.source = openmc.source.Source(space=uniform_dist)\n",
+    "settings_file.source = openmc.Source(space=uniform_dist)\n",
     "\n",
     "# Export to \"settings.xml\"\n",
     "settings_file.export_to_xml()"
