--- a/examples/jupyter/mg-mode-part-iii.ipynb
+++ b/examples/jupyter/mg-mode-part-iii.ipynb
@@ -464,7 +464,7 @@
     "# Create an initial uniform spatial source distribution over fissionable zones\n",
     "bounds = [pin_pitch, pin_pitch, 10, length - pin_pitch, length - pin_pitch, 10]\n",
     "uniform_dist = openmc.stats.Box(bounds[:3], bounds[3:], only_fissionable=True)\n",
-    "settings_file.source = openmc.source.Source(space=uniform_dist)\n",
+    "settings_file.source = openmc.Source(space=uniform_dist)\n",
     "\n",
     "# Export to \"settings.xml\"\n",
     "settings_file.export_to_xml()"
