--- a/examples/jupyter/mgxs-part-ii.ipynb
+++ b/examples/jupyter/mgxs-part-ii.ipynb
@@ -256,7 +256,7 @@
     "# Create an initial uniform spatial source distribution over fissionable zones\n",
     "bounds = [-0.63, -0.63, -0.63, 0.63, 0.63, 0.63]\n",
     "uniform_dist = openmc.stats.Box(bounds[:3], bounds[3:], only_fissionable=True)\n",
-    "settings_file.source = openmc.source.Source(space=uniform_dist)\n",
+    "settings_file.source = openmc.Source(space=uniform_dist)\n",
     "\n",
     "# Activate tally precision triggers\n",
     "settings_file.trigger_active = True\n",
