Remove weight correction method for resonance scattering, rename ARES -> RVS

--- a/examples/jupyter/nuclear-data.ipynb
+++ b/examples/jupyter/nuclear-data.ipynb
@@ -1203,7 +1203,7 @@
    "source": [
     "## Heavy-nuclide resonance scattering\n",
     "\n",
-    "OpenMC has two methods for accounting for resonance upscattering in heavy nuclides, DBRC and ARES. These methods rely on 0 K elastic scattering data being present. If you have an existing ACE/HDF5 dataset and you need to add 0 K elastic scattering data to it, this can be done using the `IncidentNeutron.add_elastic_0K_from_endf()` method. Let's do this with our original `gd157` object that we instantiated from an ACE file."
+    "OpenMC has two methods for accounting for resonance upscattering in heavy nuclides, DBRC and RVS. These methods rely on 0 K elastic scattering data being present. If you have an existing ACE/HDF5 dataset and you need to add 0 K elastic scattering data to it, this can be done using the `IncidentNeutron.add_elastic_0K_from_endf()` method. Let's do this with our original `gd157` object that we instantiated from an ACE file."
    ]
   },
   {
