Updates based on comments from @paulromano.

--- a/examples/jupyter/search.ipynb
+++ b/examples/jupyter/search.ipynb
@@ -70,8 +70,8 @@
     "    materials = openmc.Materials([fuel, zircaloy, water])\n",
     "    \n",
     "    # Create cylinders for the fuel and clad\n",
-    "    fuel_outer_radius = openmc.ZCylinder(R=0.39218)\n",
-    "    clad_outer_radius = openmc.ZCylinder(R=0.45720)\n",
+    "    fuel_outer_radius = openmc.ZCylinder(r=0.39218)\n",
+    "    clad_outer_radius = openmc.ZCylinder(r=0.45720)\n",
     "\n",
     "    # Create boundary planes to surround the geometry\n",
     "    min_x = openmc.XPlane(x0=-0.63, boundary_type='reflective')\n",
@@ -141,8 +141,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/shriwise/.pyenv/versions/3.6.7/lib/python3.6/site-packages/openmc-0.10.0-py3.6-linux-x86_64.egg/openmc/surface.py:1300: FutureWarning: \"ZCylinder(...) accepts an argument named 'r', not 'R'. Future versions of OpenMC will not accept the capitalized version.\n",
-      "  warn(_WARNING_UPPER.format(type(self).__name__, 'r', 'R'), FutureWarning)\n",
       "/home/shriwise/.pyenv/versions/3.6.7/lib/python3.6/site-packages/openmc-0.10.0-py3.6-linux-x86_64.egg/openmc/mixin.py:71: IDWarning: Another Universe instance already exists with id=0.\n",
       "  warn(msg, IDWarning)\n"
      ]
@@ -158,8 +156,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/shriwise/.pyenv/versions/3.6.7/lib/python3.6/site-packages/openmc-0.10.0-py3.6-linux-x86_64.egg/openmc/surface.py:1300: FutureWarning: \"ZCylinder(...) accepts an argument named 'r', not 'R'. Future versions of OpenMC will not accept the capitalized version.\n",
-      "  warn(_WARNING_UPPER.format(type(self).__name__, 'r', 'R'), FutureWarning)\n",
       "/home/shriwise/.pyenv/versions/3.6.7/lib/python3.6/site-packages/openmc-0.10.0-py3.6-linux-x86_64.egg/openmc/mixin.py:71: IDWarning: Another Universe instance already exists with id=0.\n",
       "  warn(msg, IDWarning)\n"
      ]
@@ -175,8 +171,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/shriwise/.pyenv/versions/3.6.7/lib/python3.6/site-packages/openmc-0.10.0-py3.6-linux-x86_64.egg/openmc/surface.py:1300: FutureWarning: \"ZCylinder(...) accepts an argument named 'r', not 'R'. Future versions of OpenMC will not accept the capitalized version.\n",
-      "  warn(_WARNING_UPPER.format(type(self).__name__, 'r', 'R'), FutureWarning)\n",
       "/home/shriwise/.pyenv/versions/3.6.7/lib/python3.6/site-packages/openmc-0.10.0-py3.6-linux-x86_64.egg/openmc/mixin.py:71: IDWarning: Another Universe instance already exists with id=0.\n",
       "  warn(msg, IDWarning)\n"
      ]
@@ -192,8 +186,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/shriwise/.pyenv/versions/3.6.7/lib/python3.6/site-packages/openmc-0.10.0-py3.6-linux-x86_64.egg/openmc/surface.py:1300: FutureWarning: \"ZCylinder(...) accepts an argument named 'r', not 'R'. Future versions of OpenMC will not accept the capitalized version.\n",
-      "  warn(_WARNING_UPPER.format(type(self).__name__, 'r', 'R'), FutureWarning)\n",
       "/home/shriwise/.pyenv/versions/3.6.7/lib/python3.6/site-packages/openmc-0.10.0-py3.6-linux-x86_64.egg/openmc/mixin.py:71: IDWarning: Another Universe instance already exists with id=0.\n",
       "  warn(msg, IDWarning)\n"
      ]
@@ -209,8 +201,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/shriwise/.pyenv/versions/3.6.7/lib/python3.6/site-packages/openmc-0.10.0-py3.6-linux-x86_64.egg/openmc/surface.py:1300: FutureWarning: \"ZCylinder(...) accepts an argument named 'r', not 'R'. Future versions of OpenMC will not accept the capitalized version.\n",
-      "  warn(_WARNING_UPPER.format(type(self).__name__, 'r', 'R'), FutureWarning)\n",
       "/home/shriwise/.pyenv/versions/3.6.7/lib/python3.6/site-packages/openmc-0.10.0-py3.6-linux-x86_64.egg/openmc/mixin.py:71: IDWarning: Another Universe instance already exists with id=0.\n",
       "  warn(msg, IDWarning)\n"
      ]
@@ -226,8 +216,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/shriwise/.pyenv/versions/3.6.7/lib/python3.6/site-packages/openmc-0.10.0-py3.6-linux-x86_64.egg/openmc/surface.py:1300: FutureWarning: \"ZCylinder(...) accepts an argument named 'r', not 'R'. Future versions of OpenMC will not accept the capitalized version.\n",
-      "  warn(_WARNING_UPPER.format(type(self).__name__, 'r', 'R'), FutureWarning)\n",
       "/home/shriwise/.pyenv/versions/3.6.7/lib/python3.6/site-packages/openmc-0.10.0-py3.6-linux-x86_64.egg/openmc/mixin.py:71: IDWarning: Another Universe instance already exists with id=0.\n",
       "  warn(msg, IDWarning)\n"
      ]
@@ -243,8 +231,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/shriwise/.pyenv/versions/3.6.7/lib/python3.6/site-packages/openmc-0.10.0-py3.6-linux-x86_64.egg/openmc/surface.py:1300: FutureWarning: \"ZCylinder(...) accepts an argument named 'r', not 'R'. Future versions of OpenMC will not accept the capitalized version.\n",
-      "  warn(_WARNING_UPPER.format(type(self).__name__, 'r', 'R'), FutureWarning)\n",
       "/home/shriwise/.pyenv/versions/3.6.7/lib/python3.6/site-packages/openmc-0.10.0-py3.6-linux-x86_64.egg/openmc/mixin.py:71: IDWarning: Another Universe instance already exists with id=0.\n",
       "  warn(msg, IDWarning)\n"
      ]
@@ -260,8 +246,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/shriwise/.pyenv/versions/3.6.7/lib/python3.6/site-packages/openmc-0.10.0-py3.6-linux-x86_64.egg/openmc/surface.py:1300: FutureWarning: \"ZCylinder(...) accepts an argument named 'r', not 'R'. Future versions of OpenMC will not accept the capitalized version.\n",
-      "  warn(_WARNING_UPPER.format(type(self).__name__, 'r', 'R'), FutureWarning)\n",
       "/home/shriwise/.pyenv/versions/3.6.7/lib/python3.6/site-packages/openmc-0.10.0-py3.6-linux-x86_64.egg/openmc/mixin.py:71: IDWarning: Another Universe instance already exists with id=0.\n",
       "  warn(msg, IDWarning)\n"
      ]
@@ -277,8 +261,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/shriwise/.pyenv/versions/3.6.7/lib/python3.6/site-packages/openmc-0.10.0-py3.6-linux-x86_64.egg/openmc/surface.py:1300: FutureWarning: \"ZCylinder(...) accepts an argument named 'r', not 'R'. Future versions of OpenMC will not accept the capitalized version.\n",
-      "  warn(_WARNING_UPPER.format(type(self).__name__, 'r', 'R'), FutureWarning)\n",
       "/home/shriwise/.pyenv/versions/3.6.7/lib/python3.6/site-packages/openmc-0.10.0-py3.6-linux-x86_64.egg/openmc/mixin.py:71: IDWarning: Another Universe instance already exists with id=0.\n",
       "  warn(msg, IDWarning)\n"
      ]
@@ -310,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
